# AI-ASSISTANT-RAG

./: .env.example  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt  test.py  test1.py  test2.py  test3.py
backend/app/api/V1/: admin.py  api.py  auth.py  chat.py  documents.py  ingest.py  notifications.py  users.py
backend/app/config/: access.py
backend/app/db/: base_class.py  database.py  models.py  qdrant_client.py
backend/app/db/models/: chat.py  document.py  role.py  user.py
backend/app/schemas/: auth.py  chat.py  document.py  notification.py  user.py
backend/app/services/: auth_service.py  authz.py  document_service.py  langchain_service.py  llm.py  notifServ.py  qdrant_client.py  rag_service.py  userServ.py
backend/app/utils/: seed_admin.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  TypingIndicator.tsx  index.ts
frontend/src/context/: AuthContext.tsx  ChatContext.tsx  ThemeContext.tsx  UserContext.tsx
frontend/src/data/: dummyMessages.ts  mockUser.ts  sampleChats.ts
frontend/src/hooks/: useAuth.tsx  useRole.ts  withRoleAccess.tsx
frontend/src/pages/: ChatPage.tsx  CreateUser.tsx  DashboardPage.tsx  HomePage.tsx  Login.tsx  ManageUsers.tsx  UploadDoc.tsx  UserHelp.tsx  UserMenu.tsx  UserNotifications.tsx  UserProfile.tsx  UserSettings.tsx  index.ts
frontend/src/types/: api.ts  base.ts  chat.ts  index.ts  notification.ts  type.ts  useRole.types.ts  user.ts
(+6 files in other folders)
