[project]
name = "fastapi-langchain-project"

version = "0.1.0"
description = ""
authors = [
    {name = "Adam Mouhim",email = "adammouhim030@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "openai (>=1.98.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
langchain = "^0.3.27"
qdrant-client = "^1.8.1"
psycopg2 = "^2.9.9"